--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -61,28 +61,24 @@
 
 									<!-- Sidebar -->
 
-										<section>
-											<h3>Just a Subheading</h3>
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis et nisi etiam.</p>
-											<footer>
-												<a href="#" class="button">Continue Reading</a>
-											</footer>
+										<section style="border-top:thick green solid;border-bottom:thick green solid;padding-left:2px;padding-right:2px;">
+											<h3>Interesting Data Visualizations Quotes</h3>
+											<p style="color:gray;">“Visualization gives you answers to questions you didn’t know you had.” </p>
+												<p>– Ben Schneiderman</p>
+											<p style="font-size:14 px;">“By visualizing information, we turn it into a landscape that you can explore with your eyes. A sort of information map. And when you’re lost in information, an information map is kind of useful.”</p>
+											<p>– David McCandless</p>
 										</section>
 
 										<section>
-											<h3>Another Subheading</h3>
+											<h3>Links to All Visualizations</h3>
 											<ul class="links">
-												<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-												<li><a href="#">Ornare in hendrerit in lectus</a></li>
-												<li><a href="#">Semper mod quis eget mi dolore</a></li>
-												<li><a href="#">Consequat etiam lorem phasellus</a></li>
-												<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-												<li><a href="#">Semper mod quisturpis nisi</a></li>
+												<li><a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/AirlineData_ProjectExplanations.pdf">AirlineData Using Plotly in R</a></li>
+												<li><a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/python_visualizationMtcars.ipynb">MtcarsData using Python</a></li>
+												<li><a href="https://public.tableau.com/app/profile/eric.brown5646/viz/flightData_Visualizations/Flights_Quarterly#1">FlightData using Tableau</a></li>
+												<li><a href="https://public.tableau.com/app/profile/eric.brown5646/viz/TwitterData_Visualizations/Sheet2">TwitterData using Tableau</a></li>
 											</ul>
 											<footer>
-												<a href="#" class="button">More Random Links</a>
+												<a href="index.html" class="button">Homepage: Quick Link</a>
 											</footer>
 										</section>
 
@@ -95,33 +91,32 @@
 
 										<article>
 											<header>
-												<h2>Key Projects</h2>
-												<p>Sidebar on the left, content on the right.</p>
+												<h2>Key Data Visualizations Projects/Assignments</h2>
+												<p>Using Languages Such as R, Python, Tableau</p>
 											</header>
 
 											<span class="image featured"><img src="images/visualizations.png" alt="" /></span>
 
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-											consequat etiam lorem ipsum dolor sit amet nullam.</p>
 
-											<h3>And Yet Another Subheading</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-											justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-											ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-											vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-											Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-											rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-											Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-											Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
+											<h3>Visualization Projects</h3>
+											<a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/AirlineData_ProjectExplanations.pdf">Visualization of airline data using Plotly package in R</a>
+											<p><b>Project Objective:</b>
+											The package I will be exploring for my STAT 484 project, will be R’s plotly library. I will be using the R graphing package to make interactive graphs, displaying information pertaining to airliner travel data. One concept, I will try to address with the data, is where most people like to go to using different airline companies such as Delta Airlines, United Airlines, American Airlines, British Airways, and etc.… I also hope to display which airports in the US have the most flight delays and corelate the delay data to other attributes. For reasons why airports have delays. Whether it be because of the weather, number of passengers in the airport, or runway and/or taxiway maintenance. Some charts I hope to use, to display the travel data will be barplots, histograms, maps/heatmaps, and scatterplots.</p>
 
-											<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-											quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-											Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-											fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-											Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-											Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
+											<a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/python_visualizationMtcars.ipynb">Brief Visualization using Mtcars in Python</a>
+											<p><b>Assignment Objective:</b>
+											Using python add-on libraries such as matplotlib and pandas plot methods to answer certain questions regarding the built-in R dataset called mtcars. The data was extracted from the 1974 Motor Trend US magazine. That contains information about fuel consumption and 10 aspects of automobile design and performance for 32 automobiles (1973–74 models).</p>
+
+											
+											<a href="https://public.tableau.com/app/profile/eric.brown5646/viz/flightData_Visualizations/Flights_Quarterly#1">Visualizations of Flight Data using Tableau</a><br>
+											<a style="font-size:18px;" href="https://github.com/downtownEB24/DataScience_Projects/blob/main/Flight_TableauVisualsExplanations.pdf">Explanations of Flight Data Visualizations</a><br>
+											<p><b>Assignment Objective:</b>
+											The goal of this assignment is to use one dimensional and time series analysis techniques to create visualizations that provide insight into patterns over time in more than 7 million flights from about a dozen US airline carriers. Four visualizations were created in total and brief explanations were written to summarize my findings.</p>
+
+											<a href="https://public.tableau.com/app/profile/eric.brown5646/viz/TwitterData_Visualizations/Sheet2">Visualizations of Twitter Data using Tableau</a><br>
+											<a style="font-size:18px;" href="https://github.com/downtownEB24/DataScience_Projects/blob/main/TwitterData_TableauVisualsExplanations.pdf">Explanations of Twitter Data Visualizations</a><br>
+											<p><b>Assignment Objective:</b>
+											The goal of this assignment is to use techniques that are used to visualize proportional data. We will be working with twitter data for a fictitious company. The data consists of tweets for the month of December 2015. The format of the data is exactly as it comes when downloaded from analytics.twitter.com. We will be trying to understand Twitter data that pertains to topics such as promotion tweets, organic tweets, replies, and impressions.</p>
 										</article>
 
 								</div>
@@ -130,66 +125,7 @@
 					</div>
 				</section>
 
-			<!-- Footer -->
-				<div id="footer">
-					<div class="container">
-						<div class="row">
-							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>Links to Stuff</h3>
-								<ul class="links">
-									<li><a href="#">Mattis et quis rutrum</a></li>
-									<li><a href="#">Suspendisse amet varius</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan dolor</a></li>
-									<li><a href="#">Mattis rutrum accumsan</a></li>
-									<li><a href="#">Suspendisse varius nibh</a></li>
-									<li><a href="#">Sed et dapibus mattis</a></li>
-								</ul>
-							</section>
-							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>More Links to Stuff</h3>
-								<ul class="links">
-									<li><a href="#">Duis neque nisi dapibus</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan sed</a></li>
-									<li><a href="#">Mattis et sed accumsan</a></li>
-									<li><a href="#">Duis neque nisi sed</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum amet varius</a></li>
-								</ul>
-							</section>
-							<section class="col-6 col-12-narrower">
-								<h3>Get In Touch</h3>
-								<form>
-									<div class="row gtr-50">
-										<div class="col-6 col-12-mobilep">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="col-6 col-12-mobilep">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="col-12">
-											<textarea name="message" id="message" placeholder="Message" rows="5"></textarea>
-										</div>
-										<div class="col-12">
-											<ul class="actions">
-												<li><input type="submit" class="button alt" value="Send Message" /></li>
-											</ul>
-										</div>
-									</div>
-								</form>
-							</section>
-						</div>
-					</div>
 
-					<!-- Icons -->
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon brands fa-google-plus-g"><span class="label">Google+</span></a></li>
-						</ul>
 
 					<!-- Copyright -->
 						<div class="copyright">
