--- a/index.html
+++ b/index.html
@@ -24,29 +24,10 @@
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
-								<li>
-									<a href="#">Dropdown</a>
-									<ul>
-										<li><a href="#">Lorem dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam sed tempus</a></li>
-										<li>
-											<a href="#">Submenu</a>
-											<ul>
-												<li><a href="#">Lorem dolor</a></li>
-												<li><a href="#">Phasellus magna</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
-									</ul>
-								</li>
-								<li><a href="left-sidebar.html">Data Visualization Projects</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="two-sidebar.html">Two Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li><a href="left_sidebar1.html">Data Visualization Projects</a></li>
+								<li><a href="left_sidebar2.html">Machine Learning Projects</a></li>
+								<li><a href="left_sidebar3.html">Statistical Programming Projects</a></li>
+								<li><a href="left_sidebar4.html">SQL Projects</a></li>
 							</ul>
 						</nav>
 
@@ -64,21 +45,21 @@
 								<div class="box highlight">
 									<i class="icon solid major fa-paper-plane"></i>
 									<h3>This Is Important</h3>
-									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+									<p>My name is Eric Brown. I was born and live in the state of New Jersey</p>
 								</div>
 							</section>
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
-									<i class="icon solid major fa-pencil-alt"></i>
+									<i class="icon solid major fa-user-graduate"></i>
 									<h3>Also Important</h3>
-									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+									<p>I finished my graduate certificate in Applied Statistics in 2019 from Penn State University. And I am working towards completing my masters degree in Data Analytics from Penn State University by the end of 2023.</p>
 								</div>
 							</section>
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
-									<i class="icon solid major fa-wrench"></i>
+									<i class="icon solid major fa-university"></i>
 									<h3>Probably Important</h3>
-									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+									<p>I finished my undergraduate degree (BS) in Information Systems & Operations Management from George Mason University, VA in 2017.</p>
 								</div>
 							</section>
 						</div>
@@ -89,8 +70,8 @@
 				<section class="wrapper style2">
 					<div class="container">
 						<header class="major">
-							<h2>A gigantic heading you can use for whatever</h2>
-							<p>With a much smaller subtitle hanging out just below it</p>
+							<h2>“Data is a tool for enhancing intuition.” - Hilary Mason (data scientist)</h2>
+							<p>I have always had a passion for learning and practicing in different areas of data analytics. More specially anything that uses statistically programming, machine learning, data visualization, or SQL techniques to better understand the underlying message behind interconnected datasets. I truly believe the combination of these skillsets listed above play a major role on how programming practices and statistical analysis practices bend meaningful insights from data.</p>
 						</header>
 					</div>
 				</section>
@@ -101,19 +82,19 @@
 						<div class="row">
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/Visualization.png" alt="" /></a>
 									<div class="inner">
-										<h3>The First Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<h3>Data Visualization Skills</h3>
+										<p>Have experience creating an array of different types of charts such as scatter plots, line graphs, pie charts, bar charts, choropleth maps. In software programs such as R, SAS, Python, Excel, and Tableau.</p>
 									</div>
 								</div>
 							</section>
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/ML.png" alt="" /></a>
 									<div class="inner">
-										<h3>The Second Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<h3>Machine Learning Skills</h3>
+										<p>Have experience using supervised & unsupervised machine learning techniques such as regression models, classification models, ensemble methods, neural network models, and natural language process.</p>
 									</div>
 								</div>
 							</section>
@@ -121,19 +102,19 @@
 						<div class="row">
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/STAT.jpg" alt="" /></a>
 									<div class="inner">
-										<h3>The Third Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<h3>Statistical Programming Skills</h3>
+										<p>Have educational knowledge of how to apply statistical reporting process for data collection and exploratory analysis in general business settings, as well as clinical business settings. Have experience conducting statistical exploratory analysis in programming languages such as SAS, R, and Python.</p>
 									</div>
 								</div>
 							</section>
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/SQL.jpg" alt="" /></a>
 									<div class="inner">
-										<h3>The Fourth Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<h3>SQL/Database Skills</h3>
+										<p>Have experience using sql commands such as select statements and aggregate functions such as AVG,MIN,MAX,SUM,COUNT to perform calcuations on data comprised in a database. Also have experience combining tables through nested join, merge, and set operators to gain more insightful knowlege of different types of data. Have experience using SQL commands in programs such as Microsoft SQL Server.</p>
 									</div>
 								</div>
 							</section>
@@ -141,47 +122,35 @@
 					</div>
 				</section>
 
-			<!-- CTA -->
-				<section id="cta" class="wrapper style3">
-					<div class="container">
-						<header>
-							<h2>Are you ready to continue your quest?</h2>
-							<a href="#" class="button">Insert Coin</a>
-						</header>
-					</div>
-				</section>
 
 			<!-- Footer -->
 				<div id="footer">
 					<div class="container">
 						<div class="row">
 							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>Links to Stuff</h3>
+								<h3>Links to Pages on Website</h3>
 								<ul class="links">
-									<li><a href="#">Mattis et quis rutrum</a></li>
-									<li><a href="#">Suspendisse amet varius</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan dolor</a></li>
-									<li><a href="#">Mattis rutrum accumsan</a></li>
-									<li><a href="#">Suspendisse varius nibh</a></li>
-									<li><a href="#">Sed et dapibus mattis</a></li>
+									<li><a href="index.html">Homepage - Top</a></li>
+									<li><a href="left_sidebar1.html">Data Visualization Projects</a></li>
+									<li><a href="left_sidebar2.html">Machine Learning Projects</a></li>
+									<li><a href="left_sidebar3.html">Statistical Programming Projects</a></li>
+									<li><a href="left_sidebar4.html">SQL Projects</a></li>
 								</ul>
 							</section>
+
+							<section class="col-3 col-6-narrower col-12-mobilep"></section>
+
 							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>More Links to Stuff</h3>
+								<h3>Photo/Pictures Accreditation</h3>
 								<ul class="links">
-									<li><a href="#">Duis neque nisi dapibus</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan sed</a></li>
-									<li><a href="#">Mattis et sed accumsan</a></li>
-									<li><a href="#">Duis neque nisi sed</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum amet varius</a></li>
+									<li><span style="color:black;font-family:verdana;font-size:19px">SQL Photo -</span><a href="https://www.freeimages.com/photo/magnifying-glass-showing-sql-word-4624987">FreeImages.com/Wavebreakmedia</a></li>
+
+									<li><span style="color:black;font-family:verdana;font-size:19px">Machine Learning Photo -</span><a href="https://pixabay.com/users/gdj-1086657/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=2729781"><br>Gordon Johnson</a> from <a href="https://pixabay.com//?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=2729781">Pixabay</a></br></li>
+
+									<li><span style="color:black;font-family:verdana;font-size:19px">Statistical Programming Photo -</span><a href="https://pixabay.com/users/artsybee-462611/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=3821034"><br>Oberholster Venita</a> from <a href="https://pixabay.com//?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=3821034">Pixabay</a></br></li>
+
+									<li><span style="color:black;font-family:verdana;font-size:19px">Data Visualization Photo -</span><a href="https://pixabay.com/users/wallusy-7300500/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=6246450"><br>Yvette W</a> from <a href="https://pixabay.com//?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=6246450">Pixabay</a></br></li>
 								</ul>
-							</section>
-							<section class="col-6 col-12-narrower">
-								<h3>Get In Touch</h3>
-								<h4>Email:esbrown2@optimum.net</h4>
 							</section>
 						</div>
 					</div>
