--- a/left_sidebar3.html
+++ b/left_sidebar3.html
@@ -53,10 +53,10 @@
 										<section>
 											<h3>Links to All Machine Learning Code</h3>
 											<ul class="links">
-												<li><a href="https://rpubs.com/dteb24/MachineLearningProject">Machine Learning Project in R</a></li>
-												<li><a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/ML_ProjectPython.ipynb">Machine Learning on Advertisement Data</a></li>
-												<li><a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/NaturalLanguageProcessing.ipynb">Natural Language Processing in Python</a></li>
-												<li><a href="https://rpubs.com/dteb24/NN_C50models">Machine Learning on Patient Data using R</a></li>
+												<li><a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/StatisticalProgramSAS.sas">Statistical Programming Assignment in SAS</a></li>
+												<li><a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/Project_code.R">Statistical Programming Project in R</a></li>
+												<li><a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/linearRegression_AnscombeDatasets.R">Anscombe Data Linear Regression Analysis - R</a></li>
+												<li><a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/ANOVA_Analysis.pdf">One-Way & Two-Way ANOVA Analysis in SAS</a></li>
 											</ul>
 											<footer>
 												<a href="index.html" class="button">Homepage: Quick Link</a>
@@ -81,22 +81,32 @@
 
 											<h3>Statistical Programming Projects</h3>
 
-											<a href="https://rpubs.com/dteb24/MachineLearningProject">Statistical Programming Assignment in SAS</a><br>
-											<a style="font-size:18px;" href="https://github.com/downtownEB24/DataScience_Projects/blob/main/Machine_Learning_Project_Explanations.pdf">Explanations of Project Code</a><br>
+											<a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/StatisticalProgramSAS.sas">Statistical Programming Assignment in SAS</a><br>
+											<a style="font-size:18px;" href="https://github.com/downtownEB24/DataScience_Projects/blob/main/SAS_ProgramAssignmentExplanations.pdf">Explanations of Project Code</a><br>
+											<b> External Datasets used in program:</b></br>
+											<a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/birds.dat">birds.dat</a></br>
+											<a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/donner.dat">donner.dat</a></br>
+											<a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/ratmaze.dat">ratmaze.dat</a>
 											<p><b>Assignment Objective:</b>
 											In this assignment I used a two-way analysis of variance test to see if changes in levels of categorical predictor variables would cause change in the mean of a quantitative response variable. I then used an interaction plot to try an explain if there was any interaction between the predictor and response variable. In the assignment I also used a t-test to analyze the mean output variable of two independent groups to see if there were any differences between one another. Another test statistic that was used in this assignment was the kappa coefficient. The kappa coefficient was used to measure the level of agreement between three cutoff values as well as between two independent groups. Next in the assignment I used a logistic regression procedure to predict a binary outcome of a categorical group based on two other independent/predictor variables. Lastly, in the assignment I used a frequency test to see if any change occurred on a numeric variable based on different levels of an ordinal predictor variable of the dataset. After which I tested for association between the two variables with a chi-square test.</p>
 
-											<a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/ML_ProjectPython.ipynb">Machine Learning Project in Python</a>
+											<a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/Project_code.R">Statistical Programming Project in R</a></br>
+											<a style="font-size:18px;" href="https://github.com/downtownEB24/DataScience_Projects/blob/main/R_StatisticalProject.pdf">Explanations of Project Code</a><br>
 											<p><b>Project Objective:</b>
-											The goal for this project was to explore three datasets (user_features.csv, product_feature.csv, click_history.csv) containing hypothetical website advertisement information. The advertisement sent by this imaginative company contained questions regarding customers’ opinion of the company’s website. In conjunction to what type of products customers buy from the company’s website, as well. As always, data cleaning and preprocessing was initiated in the beginning before model generation and evaluation was started. However, once the datasets were cleaned and explored to check for data abnormalities, machine learning algorithms were created to predict whether a customer/website user would click on an advertisement sent via email, based on certain factors. Such as if customers had ordered a product before on the company’s website, whether a product was on sale, whether the product review score was high, or the number of reviews for a product was high. The machine learning techniques used in this project were Logistic Regression, Naïve Bayes, Stochastic Gradient Descent, K-Nearest Neighbors, Decision Tree, Random Forest, and Support Vector Machine.</p>
+											In this project I conducted an ANCOVA analysis on mental health data. I gather most of the data from “The National Health Nutrition Examination Survey” (NHANES) website. And I ended up using different depression indicators such as someone’s level of depression, sleep pattern, energy levels, self-appreciation to depict whether or not these factors were statically significant at causing a person to experience depression.</p>
 
-											<a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/NaturalLanguageProcessing.ipynb">Brief Assignment on Natural Language Processing in Python</a>
+											<a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/linearRegression_AnscombeDatasets.R">Linear Regression Analysis on Anscombe Datasets</a></br>
+											<a style="font-size:18px;" href="https://github.com/downtownEB24/DataScience_Projects/blob/main/linearRegressionExplanations.pdf">Explanations of Assignment Code</a><br>
+											<b> External Datasets used in program:</b></br>
+											<a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/Anscombe.xlsx">Anscombe.xlsx</a></br>
 											<p><b>Assignment Objective:</b>
-											The goal of this assignment was to use natural language processing to count word frequencies and understand the meaning of word patterns of file names written in an imported text file. Mainly using Python’s Pandas package NLTK. To answer questions such as how many file names are listed, how many file names match a prescribed file name pattern, and frequency word count of their occurrences in the text file through word tokenization (splitting text into a list of words, removing special characters, performing stemming and/or lemmatization on each word).</p>
+											In this assignment I compared data from four datasets also known as Anscombe’s quartet presented by French statistician Francis Anscombe. I used these datasets to calculate the mean, variance, correlation, and linear regression to show how nearly identical simple descriptive statistics, can have very different distributions.</p>
 
-											<a href="https://rpubs.com/dteb24/NN_C50models">Neural Network & C5.0 model using Patient Data</a><br>
+											<a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/oneWayANOVA.sas">One-way ANOVA Analysis in SAS</a><br>
+											<a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/twoWayANOVA.sas">Two-way ANOVA Analysis in SAS</a><br>
+											<a style="font-size:18px;" href="https://github.com/downtownEB24/DataScience_Projects/blob/main/ANOVA_Analysis.pdf">Explanations of Assignment Code</a><br>
 											<p><b>Assignment Objective:</b>
-											The goal of this assignment was to use two machine learning models (neural network & C5.0) to predict whether certain factors play a role in determining if a person will experience a heart-attack. These factors included attributes such as high blood pressure, whether a person had an active or sedentary lifestyle, cholesterol level, age, and gender. All of the patient information was imported from an excel file.</p>
+											This assignment contains two SAS programs that conduct statistical analyses. The first uses one-way ANOVA test to test three different types of drugs and their affect on patient’s good cholesterol (HDL) during a study. The second program continues the analysis of a patient’s HDL levels based on drug type, but also adds another interaction term to the linear model of a person’s gender. Since the design of the study was unbalanced, I now had to use a PROC GLM procedure in SAS to conduct a two-way ANOVA analysis to see what affects each drug type had on a person’s HDL level with the addition of the interaction term of a person’s gender. I also checked to see if there was in fact any interaction between the gender variable and the drug type variable of the model, as well.</p>
 
 										</article>
 
