--- a/left_sidebar1.html
+++ b/left_sidebar1.html
@@ -57,6 +57,7 @@
 												<li><a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/python_visualizationMtcars.ipynb">MtcarsData using Python</a></li>
 												<li><a href="https://public.tableau.com/app/profile/eric.brown5646/viz/flightData_Visualizations/Flights_Quarterly#1">FlightData using Tableau</a></li>
 												<li><a href="https://public.tableau.com/app/profile/eric.brown5646/viz/TwitterData_Visualizations/Sheet2">TwitterData using Tableau</a></li>
+												<li><a href="https://public.tableau.com/app/profile/eric.brown5646/viz/Final_Project_16707147958170/Dashboard">Tableau Educational Performance Dashboard</a></li>
 											</ul>
 											<footer>
 												<a href="index.html" class="button">Homepage: Quick Link</a>
@@ -98,6 +99,11 @@
 											<a style="font-size:18px;" href="https://github.com/downtownEB24/DataScience_Projects/blob/main/TwitterData_TableauVisualsExplanations.pdf">Explanations of Twitter Data Visualizations</a><br>
 											<p><b>Assignment Objective:</b>
 											The goal of this assignment is to use techniques that are used to visualize proportional data. We will be working with twitter data for a fictitious company. The data consists of tweets for the month of December 2015. The format of the data is exactly as it comes when downloaded from analytics.twitter.com. We will be trying to understand Twitter data that pertains to topics such as promotion tweets, organic tweets, replies, and impressions.</p>
+
+											<a href="https://public.tableau.com/app/profile/eric.brown5646/viz/Final_Project_16707147958170/Dashboard">Dashboard of Student School Performance based on Alcohol Consumption in Tableau</a><br>
+											<a style="font-size:18px;" href="https://github.com/downtownEB24/DataScience_Projects/blob/main/Visual_Ed_Perform_Exp.pdf">Explanations of Student Performance (Based on Alcohol Consumption) Dashboard</a><br>
+											<p><b>Project Objective:</b>
+											The goal of this project was to understand why students preformed well or poorly in school based on their choice to drink alcohol during the school year. I based my student population sample from data collected from two Portuguese schools named Gabriel Pereia and Mousinho da Silveria. And the scores which were evaluated were Math scores between the students of the two schools. Ultimately, I used a Tableau dashboard to gain inferences about student’s performance in conjunction with their alcohol compunction through various attributes such as a student’s family size, age, sex, parent education level, study time, etc.</p>
 										</article>
 
 								</div>
