--- a/left_sidebar4.html
+++ b/left_sidebar4.html
@@ -26,8 +26,91 @@
 						</nav>
 
 				        </div>
-				        <img src="images/under_construction.png" alt="page under construction" width="1680" height="628">
-			</div>
+				   <!-- Main -->
+				<section class="wrapper style1">
+					<div class="container">
+						<div class="row gtr-200">
+							<div class="col-4 col-12-narrower">
+								<div id="sidebar">
+
+									<!-- Sidebar -->
+
+										<section style="border-top:thick blue solid;border-bottom:thick blue solid;padding-left:2px;padding-right:2px;">
+											<h3>Interesting SQL Quotes</h3>
+											<p style="color:gray;">“Everything uses SQL or a derivative of SQL.”</p>
+												<p>– Vicknesh Mano</p>
+											<p style="font-size:14 px;">“Data is the new science. Big Data holds the answers”</p>
+											<p>– Pat Gelsinger</p>
+										</section>
+
+										<section>
+											<h3>Links to All Database/SQL Files</h3>
+											<ul class="links">
+												<li><a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/Database_Project.pdf">Oracle Database Project</a></li>
+											</ul>
+											<footer>
+												<a href="index.html" class="button">Homepage: Quick Link</a>
+											</footer>
+										</section>
+
+								</div>
+							</div>
+							<div class="col-8  col-12-narrower imp-narrower">
+								<div id="content">
+
+									<!-- Content -->
+
+										<article>
+											<header>
+												<h2>Key Database Projects </h2>
+												<p>Using Languages such as SQL</p>
+											</header>
+
+											<span class="image featured"><img src="images/database.jpg" alt="" /></span>
+											
+
+											<h3>Database Development Project</h3>
+
+											<a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/Database_Project.pdf">Database/SQL Project in Oracle</a><br>
+											<b> Supporting Requirement & SQL Queries Files:</b></br>
+											<a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/Database_Scope_Requirements.pdf">Database Overview & Requirements</a></br>
+											<a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/milestone6.sql">SQL Queries</a></br>
+											<p><b>Assignment Objective:</b>
+											The goal of this project was to go through the different steps of implementing a database in Oracle SQL developer that could be functional for a restaurant to improve business efficiency and performance. The project was divided into six milestones that included the following:</p>
+											<p>Milestone 1 – General Requirements</p>
+											<p>Milestone 2 – Conceptual Design</p>
+											<p>Milestone 3 – Logical Design</p>
+											<p>Milestone 4 – Normalization</p>
+											<p>Milestone 5 - Physical Design</p>
+											<p>Milestone 6 – SQL Queries</p>
+
+										</article>
+
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+
+				<!-- Copyright -->
+						<div class="copyright">
+							<ul class="menu">
+								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>Database Image by: <a href="https://pixabay.com/users/earvine95-2534314/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=2394312">Irvin John Mabli</a> from <a href="https://pixabay.com//?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=2394312"> Pixabay</a>
+							</ul>
+						</div>
+
+				</div>
+
+		</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.dropotron.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 	</body>
 
 
