Several changes to contain the DOM manipulations to the gameContainer

--- a/left_sidebar3.html
+++ b/left_sidebar3.html
@@ -81,7 +81,7 @@
 
 											<!-- Game container -->
 											<span class="image featured">
-												<div id="gameContainer"></div>
+												<div id="gameContainer" style="width: 500px; height: 500px; margin: auto;"></div>
 											  </span>
 											
 
