--- a/left_sidebar3.html
+++ b/left_sidebar3.html
@@ -79,10 +79,22 @@
 												<p>Using Languages such as Javascript, Node.js, CSS, Processing,MongoDB, Bash, JSON, YAML, HTML</p>
 											</header>
 
-											<!-- Game container -->
-											<span class="image featured">
-												<div id="gameContainer" style="width: 500px; height: 500px; margin: auto; position:relative;"></div>
-											  </span>
+											<!-- Game Section -->
+											<div id="gameSection" style="position: relative; text-align: center; width: 100%; max-width: 500px; margin: auto;">
+												<img src="images/home_button_Game.jpg" alt="Welcome to Flappy Pong" style="width: 100%; height: auto; display: block;" />
+												<div style="position: absolute; top: 41%; left: 50%; transform: translate(-50%, -50%); color: white; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);">
+													<h2 style="font-size: 28px; margin-bottom: 20px; position: relative; top: 12px;">Flappy Pong</h2>
+													<p style="font-size: 18px; font-weight: bold; margin-top: 128px; margin-bottom: 20px; color: #FFD700; text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7); top: 10px;">
+														Challenge your skills! Click below to start playing.
+													</p>
+													<a href="game.html">
+														<button style="font-size: 16px; padding: 10px 20px; background-color: #007BFF; color: white; border: none; border-radius: 5px; cursor: pointer; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);">
+															Play Game
+														</button>
+													</a>
+												</div>
+											</div>
+											
 											
 
 											<h3>Statistical Programming Projects</h3>
