--- a/game.html
+++ b/game.html
@@ -7,16 +7,16 @@
     <link rel="stylesheet" href="assets/css/game.css"> <!-- Link to game-specific CSS -->
 </head>
 <body>
-    <header>
-        <div id="topBar">
+    <header id="topBar">
             <h1>Welcome To Flappy Pong</h1>
-          </div>
     </header>
-    <div id="gameContainer"></div> <!-- Game container -->
-    <footer>
-        <a href="left_sidebar3.html" style="text-decoration: none;">
-            <button>Back to Web Application Page</button>
-        </a>
+
+    <!-- Game container -->
+    <div id="gameContainer"></div> 
+
+    <!-- Footer -->
+    <footer id="footer">
+        <a href="left_sidebar3.html" class="back-button">Back to Web Application Page</a>
     </footer>
 
      <!-- PLEASE NO CHANGES BELOW THIS LINE -->
