Changes to make game its own page

--- a/game.html
+++ b/game.html
@@ -12,7 +12,9 @@
     </header>
 
     <!-- Game container -->
-    <div id="gameContainer"></div> 
+     <main id="mainContainer">
+        <div id="gameContainer"></div>
+     </main>
 
     <!-- Footer -->
     <footer id="footer">
