--- a/left_sidebar3.html
+++ b/left_sidebar3.html
@@ -56,10 +56,10 @@
 										<section>
 											<h3>Links to All Web Application Code</h3>
 											<ul class="links">
-												<li><a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/StatisticalProgramSAS.sas">Statistical Programming Assignment in SAS</a></li>
-												<li><a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/Project_code.R">Statistical Programming Project in R</a></li>
-												<li><a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/linearRegression_AnscombeDatasets.R">Anscombe Data Linear Regression Analysis - R</a></li>
-												<li><a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/ANOVA_Analysis.pdf">One-Way & Two-Way ANOVA Analysis in SAS</a></li>
+												<li><a href="https://github.com/downtownEB24/Web_Projects/blob/main/Game_Instruction_Manual.pdf">Game Instructions</a></li>
+												<li><a href="https://github.com/downtownEB24/Web_Projects/blob/main/Processing_Game_Analysis.pdf">Game Code Analysis</a></li>
+												<li><a href="https://github.com/downtownEB24/Web_Projects/blob/main/Game_API_Analysis.pdf">Game API Analysis</a></li>
+												<li><a href="https://github.com/downtownEB24/Web_Projects/blob/main/Picture_References.txt">Game Picture Sources</a></li>
 											</ul>
 											<footer>
 												<a href="index.html" class="button">Homepage: Quick Link</a>
@@ -97,34 +97,13 @@
 											
 											
 
-											<h3>Statistical Programming Projects</h3>
+											<h3>About the Game</h3>
+											<p>
+												Welcome to the ultimate skill and strategy challenge! In this game, you control a ball navigating through a series of dynamically changing obstacles and environments. With each difficulty level offering unique twists—ranging from relaxing gameplay in Easy mode to intense weather effects and power-ups in Hard mode—there's something for every type of player. Your goal? Stay alive as long as possible and rack up the highest score!
+											</br></br>
+												For those who aim for the top, your achievements can be recognized on the leaderboard. If you land a spot in the Top-5 Scores, you can save your record using your username and a PIN. Can you master the challenges and claim your place among the best?</p>
 
-											<a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/StatisticalProgramSAS.sas">Statistical Programming Assignment in SAS</a><br>
-											<a style="font-size:18px;" href="https://github.com/downtownEB24/DataScience_Projects/blob/main/SAS_ProgramAssignmentExplanations.pdf">Explanations of Project Code</a><br>
-											<b> External Datasets used in program:</b></br>
-											<a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/birds.dat">birds.dat</a></br>
-											<a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/donner.dat">donner.dat</a></br>
-											<a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/ratmaze.dat">ratmaze.dat</a>
-											<p><b>Assignment Objective:</b>
-											In this assignment I used a two-way analysis of variance test to see if changes in levels of categorical predictor variables would cause change in the mean of a quantitative response variable. I then used an interaction plot to try an explain if there was any interaction between the predictor and response variable. In the assignment I also used a t-test to analyze the mean output variable of two independent groups to see if there were any differences between one another. Another test statistic that was used in this assignment was the kappa coefficient. The kappa coefficient was used to measure the level of agreement between three cutoff values as well as between two independent groups. Next in the assignment I used a logistic regression procedure to predict a binary outcome of a categorical group based on two other independent/predictor variables. Lastly, in the assignment I used a frequency test to see if any change occurred on a numeric variable based on different levels of an ordinal predictor variable of the dataset. After which I tested for association between the two variables with a chi-square test.</p>
-
-											<a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/Project_code.R">Statistical Programming Project in R</a></br>
-											<a style="font-size:18px;" href="https://github.com/downtownEB24/DataScience_Projects/blob/main/R_StatisticalProject.pdf">Explanations of Project Code</a><br>
-											<p><b>Project Objective:</b>
-											In this project I conducted an ANCOVA analysis on mental health data. I gather most of the data from “The National Health Nutrition Examination Survey” (NHANES) website. And I ended up using different depression indicators such as someone’s level of depression, sleep pattern, energy levels, self-appreciation to depict whether or not these factors were statically significant at causing a person to experience depression.</p>
-
-											<a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/linearRegression_AnscombeDatasets.R">Linear Regression Analysis on Anscombe Datasets</a></br>
-											<a style="font-size:18px;" href="https://github.com/downtownEB24/DataScience_Projects/blob/main/linearRegressionExplanations.pdf">Explanations of Assignment Code</a><br>
-											<b> External Datasets used in program:</b></br>
-											<a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/Anscombe.xlsx">Anscombe.xlsx</a></br>
-											<p><b>Assignment Objective:</b>
-											In this assignment I compared data from four datasets also known as Anscombe’s quartet presented by French statistician Francis Anscombe. I used these datasets to calculate the mean, variance, correlation, and linear regression to show how nearly identical simple descriptive statistics, can have very different distributions.</p>
-
-											<a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/oneWayANOVA.sas">One-way ANOVA Analysis in SAS</a><br>
-											<a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/twoWayANOVA.sas">Two-way ANOVA Analysis in SAS</a><br>
-											<a style="font-size:18px;" href="https://github.com/downtownEB24/DataScience_Projects/blob/main/ANOVA_Analysis.pdf">Explanations of Assignment Code</a><br>
-											<p><b>Assignment Objective:</b>
-											This assignment contains two SAS programs that conduct statistical analyses. The first uses one-way ANOVA test to test three different types of drugs and their affect on patient’s good cholesterol (HDL) during a study. The second program continues the analysis of a patient’s HDL levels based on drug type, but also adds another interaction term to the linear model of a person’s gender. Since the design of the study was unbalanced, I now had to use a PROC GLM procedure in SAS to conduct a two-way ANOVA analysis to see what affects each drug type had on a person’s HDL level with the addition of the interaction term of a person’s gender. I also checked to see if there was in fact any interaction between the gender variable and the drug type variable of the model, as well.</p>
+												<p>Want to learn more about the gameplay, strategies, and features? <a href="https://github.com/downtownEB24/Web_Projects/blob/main/Game_Instruction_Manual.pdf">Click here to see full instructions</a></p>
 
 										</article>
 
@@ -140,7 +119,6 @@
 						<div class="copyright">
 							<ul class="menu">
 								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-								<li>Statistics Image by: <a href="https://pixabay.com/users/artsybee-462611/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=3821034">Oberholster Venita</a> from <a href="https://pixabay.com//?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=3821034">Pixabay</a></li>
 							</ul>
 						</div>
 
@@ -155,6 +133,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			
+
 	</body>
 </html>
