Changes to Deep Learning webpage

--- a/left_sidebar2.html
+++ b/left_sidebar2.html
@@ -79,7 +79,7 @@
 												<p>Using Languages such as R, Python</p>
 											</header>
 
-											<span class="image featured"><img src="images/machine_learning.jpg" alt="" /></span>
+											<span class="image featured"><img src="images/machine_learning.jpg" alt="Machine Learning Image" /></span>
 											
 
 											<h3>Machine Learning Projects</h3>
