--- a/left_sidebar4.html
+++ b/left_sidebar4.html
@@ -79,7 +79,7 @@
 												<p>Using Languages such as SAS, R, Python</p>
 											</header>
 
-											<span class="image featured"><img src="images/main_STAT.jpg" alt="" /></span>
+											<span class="image featured"><img src="images/main_STAT.jpg" alt="Statistics Image on Laptop Screen" /></span>
 											
 
 											<h3>Statistical Programming Projects</h3>
