--- a/left_sidebar5.html
+++ b/left_sidebar5.html
@@ -75,7 +75,7 @@
 												<p>Using Languages such as SQL</p>
 											</header>
 
-											<span class="image featured"><img src="images/database.jpg" alt="" /></span>
+											<span class="image featured"><img src="images/database.jpg" alt="Database Image" /></span>
 											
 
 											<h3>Database Development Project</h3>
