--- a/left_sidebar6.html
+++ b/left_sidebar6.html
@@ -37,9 +37,61 @@
 				</div>
 
 			<!-- Main -->
-				<section class="wrapper style1">
-					<img src="images/under_construction.png" alt="Page is Under Construction" style="width: 100%; height: auto; display: block;"/>
-				</section>
+			<section class="wrapper style1">
+				<div class="container">
+					<div class="row gtr-200">
+						<div class="col-4 col-12-narrower">
+							<div id="sidebar">
+
+								<!-- Sidebar -->
+
+									<section style="border-top:thick green solid;border-bottom:thick green solid;padding-left:2px;padding-right:2px;">
+										<h3>Interesting Deep Learning Quotes</h3>
+										<p style="color:gray;">“The ultimate goal of AI is not to build machines that are intelligent, but to build machines that can help us make better decisions.” </p>
+											<p>– Yann LeCun</p>
+										<p style="font-size:14 px;">“The exciting part of deep learning is the ability to turn a giant collection of data into a learning system that can learn tasks that are too complicated to program manually.”</p>
+										<p>– Jeff Dean</p>
+									</section>
+
+									<section>
+										<h3>Links to All Deep Learning Proj Files</h3>
+										<ul class="links">
+											<li><a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/AI_textImage_Proj/RachelBrooks-EricBrown-ClaudioMema/Readme.txt">ReadMe for TextImage Model</a></li>
+											<li><a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/AI_textImage_Proj/RachelBrooks-EricBrown-ClaudioMema/RachelBrooks-EricBrown-ClaudioMema.pptx">PowerPoint for TextImage Model</a></li>
+											<li><a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/DeepLearning_ImageText_Model.pdf">Project Paper for Recommendation Model</a></li>
+											<li><a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/AI_textImage_Proj/RachelBrooks-EricBrown-ClaudioMema/FinalProject.py">Source Code for Recommendation Model</a></li>
+										</ul>
+										<footer>
+											<a href="index.html" class="button">Homepage: Quick Link</a>
+										</footer>
+									</section>
+
+							</div>
+						</div>
+						<div class="col-8  col-12-narrower imp-narrower">
+							<div id="content">
+
+								<!-- Content -->
+
+									<article>
+										<header>
+											<h2>Key Deep Learning Projects</h2>
+											<p>Using FrameWorks/Libraries in Python such as Pytorch and Tensorflow</p>
+										</header>
+
+										<span class="image featured"><img src="images/Deep_learning.jpg" alt="Deep Learning Picture" /></span>
+
+
+										<h3>Deep Learning Projects</h3>
+										<a href="https://github.com/downtownEB24/DataScience_Projects/blob/main/DeepLearning_ImageText_Model.pdf">E-Commerce Recommendations Via Multi-Modal Inputs</a>
+										<p><b>Project Objective:</b>
+											This project aims to develop a multi-modal recommendation system for e-commerce platforms, combining deep learning techniques to process both product images and textual descriptions. Utilizing ResNet for visual feature extraction and CLIP for embedding-based similarity matching, the system delivers personalized product recommendations by analyzing images, product metadata, and textual reviews. The objective is to bridge the gap between visual and textual data, enabling smarter, context-aware suggestions that enhance user engagement and shopping experiences. This solution addresses challenges like cold-start problems, class imbalances, and scalability, offering a robust and adaptable recommendation engine for modern e-commerce platforms.</p>
+									</article>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 
 
 
