--- a/left_sidebar7.html
+++ b/left_sidebar7.html
@@ -80,7 +80,7 @@
 												<p>Using Languages Such as R, Python, Tableau</p>
 											</header>
 
-											<span class="image featured"><img src="images/visualizations.png" alt="" /></span>
+											<span class="image featured"><img src="images/visualizations.png" alt="Visualizations Picture" /></span>
 
 
 											<h3>Visualization Projects</h3>
